Update swagger. Add Active Storage.
