# pseudobackend/swagger/v1/swagger.json
@@ -6,11 +6,29 @@
     "description": "API endpoints for SalesOps"
   },
   "paths": {
-    "/api/v1/commisions": {
+    "/api/v1/commissions": {
       "get": {
         "summary": "Get List of all reports",
         "tags": [
           "Commission Reports"
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
         ],
         "responses": {
           "200": {
@@ -63,7 +81,7 @@
                     "page": {
                       "type": "integer"
                     },
-                    "page_size": {
+                    "size": {
                       "type": "integer"
                     },
                     "total": {
@@ -76,7 +94,7 @@
                   "required": [
                     "data",
                     "page",
-                    "page_size",
+                    "size",
                     "total",
                     "total_pages"
                   ]
@@ -87,7 +105,7 @@
         }
       }
     },
-    "/api/v1/commisions/{id}": {
+    "/api/v1/commissions/{id}": {
       "get": {
         "summary": "Get a report",
         "tags": [
@@ -159,7 +177,7 @@
         }
       }
     },
-    "/api/v1/commisions/{id}/sellers": {
+    "/api/v1/commissions/{id}/sellers": {
       "get": {
         "summary": "Get the sellers of a report",
         "tags": [
@@ -169,6 +187,22 @@
           {
             "name": "id",
             "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
             "required": true,
             "schema": {
               "type": "integer"
@@ -212,7 +246,7 @@
                     "page": {
                       "type": "integer"
                     },
-                    "page_size": {
+                    "size": {
                       "type": "integer"
                     },
                     "total": {
@@ -225,7 +259,7 @@
                   "required": [
                     "data",
                     "page",
-                    "page_size",
+                    "size",
                     "total",
                     "total_pages"
                   ]
@@ -236,8 +270,8 @@
         }
       }
     },
-    "/api/v1/commisions/{id}/export": {
-      "get": {
+    "/api/v1/commissions/{id}/export": {
+      "post": {
         "summary": "Generate commissions report",
         "tags": [
           "Commission Sellers"
@@ -249,6 +283,14 @@
             "required": true,
             "schema": {
               "type": "integer"
+            }
+          },
+          {
+            "name": "doc_type",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           }
         ],
@@ -263,6 +305,9 @@
                     "id": {
                       "type": "integer"
                     },
+                    "comission_report_id": {
+                      "type": "integer"
+                    },
                     "type": {
                       "type": "string"
                     },
@@ -273,7 +318,151 @@
                   "required": [
                     "url",
                     "type",
+                    "comission_report_id",
                     "id"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/exports": {
+      "post": {
+        "summary": "Get all exports (.csv or .pdf)",
+        "tags": [
+          "Exports type .csv and .pdf"
+        ],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "sales csv received",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer"
+                          },
+                          "comission_report_id": {
+                            "type": "integer"
+                          },
+                          "filename": {
+                            "type": "string"
+                          },
+                          "url": {
+                            "type": "string"
+                          },
+                          "type": {
+                            "type": "string"
+                          },
+                          "status": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    },
+                    "page": {
+                      "type": "integer"
+                    },
+                    "size": {
+                      "type": "integer"
+                    },
+                    "total": {
+                      "type": "integer"
+                    },
+                    "total_pages": {
+                      "type": "integer"
+                    }
+                  },
+                  "required": [
+                    "data",
+                    "page",
+                    "size",
+                    "total",
+                    "total_pages"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/exports/{id}": {
+      "post": {
+        "summary": "Get all exports (.csv or .pdf)",
+        "tags": [
+          "Exports type .csv and .pdf of a comission report"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "sales csv received",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
+                    },
+                    "comission_report_id": {
+                      "type": "integer"
+                    },
+                    "filename": {
+                      "type": "string"
+                    },
+                    "url": {
+                      "type": "string"
+                    },
+                    "type": {
+                      "type": "string"
+                    },
+                    "status": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "id",
+                    "comission_report_id",
+                    "filename",
+                    "url",
+                    "type",
+                    "status"
                   ]
                 }
               }
